parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOWNTO
    FUNCTION
    PROCEDURE
    REAL

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON block DOT
Rule 2     block -> declarations BEGIN statements END
Rule 3     declarations -> VAR var_declaration_list
Rule 4     declarations -> empty
Rule 5     var_declaration_list -> var_declaration SEMICOLON var_declaration_list
Rule 6     var_declaration_list -> var_declaration SEMICOLON
Rule 7     var_declaration -> id_list COLON type
Rule 8     id_list -> ID
Rule 9     id_list -> ID COMMA id_list
Rule 10    array_type -> ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF type
Rule 11    type -> INTEGER
Rule 12    type -> BOOLEAN
Rule 13    type -> STRING
Rule 14    type -> array_type
Rule 15    statements -> statement SEMICOLON statements
Rule 16    statements -> statement
Rule 17    statement -> assignment
Rule 18    statement -> writeln
Rule 19    statement -> readln
Rule 20    statement -> if_statement
Rule 21    statement -> while_statement
Rule 22    statement -> for_statement
Rule 23    statement -> compound_statement
Rule 24    statement -> empty
Rule 25    compound_statement -> BEGIN statements END
Rule 26    assignment -> variable ASSIGN expression
Rule 27    variable -> ID
Rule 28    variable -> ID LBRACKET expression RBRACKET
Rule 29    writeln -> WRITELN LPAREN expression_list RPAREN
Rule 30    expression_list -> expression
Rule 31    expression_list -> expression COMMA expression_list
Rule 32    readln -> READLN LPAREN variable RPAREN
Rule 33    if_statement -> IF expression THEN statement
Rule 34    if_statement -> IF expression THEN statement ELSE statement
Rule 35    while_statement -> WHILE expression DO statement
Rule 36    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 37    expression -> simple_expression
Rule 38    expression -> simple_expression EQUAL simple_expression
Rule 39    expression -> simple_expression NE simple_expression
Rule 40    expression -> simple_expression LT simple_expression
Rule 41    expression -> simple_expression LE simple_expression
Rule 42    expression -> simple_expression GT simple_expression
Rule 43    expression -> simple_expression GE simple_expression
Rule 44    simple_expression -> term
Rule 45    simple_expression -> simple_expression PLUS term
Rule 46    simple_expression -> simple_expression MINUS term
Rule 47    simple_expression -> simple_expression OR term
Rule 48    term -> factor
Rule 49    term -> term TIMES factor
Rule 50    term -> term DIVIDE factor
Rule 51    term -> term DIV factor
Rule 52    term -> term MOD factor
Rule 53    term -> term AND factor
Rule 54    factor -> variable
Rule 55    factor -> NUMBER
Rule 56    factor -> STRING_LITERAL
Rule 57    factor -> TRUE
Rule 58    factor -> FALSE
Rule 59    factor -> LPAREN expression RPAREN
Rule 60    empty -> <empty>

Terminals, with rules where they appear

AND                  : 53
ARRAY                : 10
ASSIGN               : 26 36
BEGIN                : 2 25
BOOLEAN              : 12
COLON                : 7
COMMA                : 9 31
DIV                  : 51
DIVIDE               : 50
DO                   : 35 36
DOT                  : 1
DOTDOT               : 10
DOWNTO               : 
ELSE                 : 34
END                  : 2 25
EQUAL                : 38
FALSE                : 58
FOR                  : 36
FUNCTION             : 
GE                   : 43
GT                   : 42
ID                   : 1 8 9 27 28 36
IF                   : 33 34
INTEGER              : 11
LBRACKET             : 10 28
LE                   : 41
LPAREN               : 29 32 59
LT                   : 40
MINUS                : 46
MOD                  : 52
NE                   : 39
NUMBER               : 10 10 55
OF                   : 10
OR                   : 47
PLUS                 : 45
PROCEDURE            : 
PROGRAM              : 1
RBRACKET             : 10 28
READLN               : 32
REAL                 : 
RPAREN               : 29 32 59
SEMICOLON            : 1 5 6 15
STRING               : 13
STRING_LITERAL       : 56
THEN                 : 33 34
TIMES                : 49
TO                   : 36
TRUE                 : 57
VAR                  : 3
WHILE                : 35
WRITELN              : 29
error                : 

Nonterminals, with rules where they appear

array_type           : 14
assignment           : 17
block                : 1
compound_statement   : 23
declarations         : 2
empty                : 4 24
expression           : 26 28 30 31 33 34 35 36 36 59
expression_list      : 29 31
factor               : 48 49 50 51 52 53
for_statement        : 22
id_list              : 7 9
if_statement         : 20
program              : 0
readln               : 19
simple_expression    : 37 38 38 39 39 40 40 41 41 42 42 43 43 45 46 47
statement            : 15 16 33 34 34 35 36
statements           : 2 15 25
term                 : 44 45 46 47 49 50 51 52 53
type                 : 7 10
var_declaration      : 5 6
var_declaration_list : 3 5
variable             : 26 32 54
while_statement      : 21
writeln              : 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . block DOT
    (2) block -> . declarations BEGIN statements END
    (3) declarations -> . VAR var_declaration_list
    (4) declarations -> . empty
    (60) empty -> .

    VAR             shift and go to state 7
    BEGIN           reduce using rule 60 (empty -> .)

    block                          shift and go to state 5
    declarations                   shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) program -> PROGRAM ID SEMICOLON block . DOT

    DOT             shift and go to state 9


state 6

    (2) block -> declarations . BEGIN statements END

    BEGIN           shift and go to state 10


state 7

    (3) declarations -> VAR . var_declaration_list
    (5) var_declaration_list -> . var_declaration SEMICOLON var_declaration_list
    (6) var_declaration_list -> . var_declaration SEMICOLON
    (7) var_declaration -> . id_list COLON type
    (8) id_list -> . ID
    (9) id_list -> . ID COMMA id_list

    ID              shift and go to state 14

    var_declaration_list           shift and go to state 11
    var_declaration                shift and go to state 12
    id_list                        shift and go to state 13

state 8

    (4) declarations -> empty .

    BEGIN           reduce using rule 4 (declarations -> empty .)


state 9

    (1) program -> PROGRAM ID SEMICOLON block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON block DOT .)


state 10

    (2) block -> declarations BEGIN . statements END
    (15) statements -> . statement SEMICOLON statements
    (16) statements -> . statement
    (17) statement -> . assignment
    (18) statement -> . writeln
    (19) statement -> . readln
    (20) statement -> . if_statement
    (21) statement -> . while_statement
    (22) statement -> . for_statement
    (23) statement -> . compound_statement
    (24) statement -> . empty
    (26) assignment -> . variable ASSIGN expression
    (29) writeln -> . WRITELN LPAREN expression_list RPAREN
    (32) readln -> . READLN LPAREN variable RPAREN
    (33) if_statement -> . IF expression THEN statement
    (34) if_statement -> . IF expression THEN statement ELSE statement
    (35) while_statement -> . WHILE expression DO statement
    (36) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (25) compound_statement -> . BEGIN statements END
    (60) empty -> .
    (27) variable -> . ID
    (28) variable -> . ID LBRACKET expression RBRACKET

    WRITELN         shift and go to state 27
    READLN          shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    BEGIN           shift and go to state 15
    SEMICOLON       reduce using rule 60 (empty -> .)
    END             reduce using rule 60 (empty -> .)
    ID              shift and go to state 32

    statements                     shift and go to state 16
    statement                      shift and go to state 17
    assignment                     shift and go to state 18
    writeln                        shift and go to state 19
    readln                         shift and go to state 20
    if_statement                   shift and go to state 21
    while_statement                shift and go to state 22
    for_statement                  shift and go to state 23
    compound_statement             shift and go to state 24
    empty                          shift and go to state 25
    variable                       shift and go to state 26

state 11

    (3) declarations -> VAR var_declaration_list .

    BEGIN           reduce using rule 3 (declarations -> VAR var_declaration_list .)


state 12

    (5) var_declaration_list -> var_declaration . SEMICOLON var_declaration_list
    (6) var_declaration_list -> var_declaration . SEMICOLON

    SEMICOLON       shift and go to state 33


state 13

    (7) var_declaration -> id_list . COLON type

    COLON           shift and go to state 34


state 14

    (8) id_list -> ID .
    (9) id_list -> ID . COMMA id_list

    COLON           reduce using rule 8 (id_list -> ID .)
    COMMA           shift and go to state 35


state 15

    (25) compound_statement -> BEGIN . statements END
    (15) statements -> . statement SEMICOLON statements
    (16) statements -> . statement
    (17) statement -> . assignment
    (18) statement -> . writeln
    (19) statement -> . readln
    (20) statement -> . if_statement
    (21) statement -> . while_statement
    (22) statement -> . for_statement
    (23) statement -> . compound_statement
    (24) statement -> . empty
    (26) assignment -> . variable ASSIGN expression
    (29) writeln -> . WRITELN LPAREN expression_list RPAREN
    (32) readln -> . READLN LPAREN variable RPAREN
    (33) if_statement -> . IF expression THEN statement
    (34) if_statement -> . IF expression THEN statement ELSE statement
    (35) while_statement -> . WHILE expression DO statement
    (36) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (25) compound_statement -> . BEGIN statements END
    (60) empty -> .
    (27) variable -> . ID
    (28) variable -> . ID LBRACKET expression RBRACKET

    WRITELN         shift and go to state 27
    READLN          shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    BEGIN           shift and go to state 15
    SEMICOLON       reduce using rule 60 (empty -> .)
    END             reduce using rule 60 (empty -> .)
    ID              shift and go to state 32

    statements                     shift and go to state 36
    statement                      shift and go to state 17
    assignment                     shift and go to state 18
    writeln                        shift and go to state 19
    readln                         shift and go to state 20
    if_statement                   shift and go to state 21
    while_statement                shift and go to state 22
    for_statement                  shift and go to state 23
    compound_statement             shift and go to state 24
    empty                          shift and go to state 25
    variable                       shift and go to state 26

state 16

    (2) block -> declarations BEGIN statements . END

    END             shift and go to state 37


state 17

    (15) statements -> statement . SEMICOLON statements
    (16) statements -> statement .

    SEMICOLON       shift and go to state 38
    END             reduce using rule 16 (statements -> statement .)


state 18

    (17) statement -> assignment .

    SEMICOLON       reduce using rule 17 (statement -> assignment .)
    END             reduce using rule 17 (statement -> assignment .)
    ELSE            reduce using rule 17 (statement -> assignment .)


state 19

    (18) statement -> writeln .

    SEMICOLON       reduce using rule 18 (statement -> writeln .)
    END             reduce using rule 18 (statement -> writeln .)
    ELSE            reduce using rule 18 (statement -> writeln .)


state 20

    (19) statement -> readln .

    SEMICOLON       reduce using rule 19 (statement -> readln .)
    END             reduce using rule 19 (statement -> readln .)
    ELSE            reduce using rule 19 (statement -> readln .)


state 21

    (20) statement -> if_statement .

    SEMICOLON       reduce using rule 20 (statement -> if_statement .)
    END             reduce using rule 20 (statement -> if_statement .)
    ELSE            reduce using rule 20 (statement -> if_statement .)


state 22

    (21) statement -> while_statement .

    SEMICOLON       reduce using rule 21 (statement -> while_statement .)
    END             reduce using rule 21 (statement -> while_statement .)
    ELSE            reduce using rule 21 (statement -> while_statement .)


state 23

    (22) statement -> for_statement .

    SEMICOLON       reduce using rule 22 (statement -> for_statement .)
    END             reduce using rule 22 (statement -> for_statement .)
    ELSE            reduce using rule 22 (statement -> for_statement .)


state 24

    (23) statement -> compound_statement .

    SEMICOLON       reduce using rule 23 (statement -> compound_statement .)
    END             reduce using rule 23 (statement -> compound_statement .)
    ELSE            reduce using rule 23 (statement -> compound_statement .)


state 25

    (24) statement -> empty .

    SEMICOLON       reduce using rule 24 (statement -> empty .)
    END             reduce using rule 24 (statement -> empty .)
    ELSE            reduce using rule 24 (statement -> empty .)


state 26

    (26) assignment -> variable . ASSIGN expression

    ASSIGN          shift and go to state 39


state 27

    (29) writeln -> WRITELN . LPAREN expression_list RPAREN

    LPAREN          shift and go to state 40


state 28

    (32) readln -> READLN . LPAREN variable RPAREN

    LPAREN          shift and go to state 41


state 29

    (33) if_statement -> IF . expression THEN statement
    (34) if_statement -> IF . expression THEN statement ELSE statement
    (37) expression -> . simple_expression
    (38) expression -> . simple_expression EQUAL simple_expression
    (39) expression -> . simple_expression NE simple_expression
    (40) expression -> . simple_expression LT simple_expression
    (41) expression -> . simple_expression LE simple_expression
    (42) expression -> . simple_expression GT simple_expression
    (43) expression -> . simple_expression GE simple_expression
    (44) simple_expression -> . term
    (45) simple_expression -> . simple_expression PLUS term
    (46) simple_expression -> . simple_expression MINUS term
    (47) simple_expression -> . simple_expression OR term
    (48) term -> . factor
    (49) term -> . term TIMES factor
    (50) term -> . term DIVIDE factor
    (51) term -> . term DIV factor
    (52) term -> . term MOD factor
    (53) term -> . term AND factor
    (54) factor -> . variable
    (55) factor -> . NUMBER
    (56) factor -> . STRING_LITERAL
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (59) factor -> . LPAREN expression RPAREN
    (27) variable -> . ID
    (28) variable -> . ID LBRACKET expression RBRACKET

    NUMBER          shift and go to state 47
    STRING_LITERAL  shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    LPAREN          shift and go to state 51
    ID              shift and go to state 32

    expression                     shift and go to state 42
    simple_expression              shift and go to state 43
    term                           shift and go to state 44
    factor                         shift and go to state 45
    variable                       shift and go to state 46

state 30

    (35) while_statement -> WHILE . expression DO statement
    (37) expression -> . simple_expression
    (38) expression -> . simple_expression EQUAL simple_expression
    (39) expression -> . simple_expression NE simple_expression
    (40) expression -> . simple_expression LT simple_expression
    (41) expression -> . simple_expression LE simple_expression
    (42) expression -> . simple_expression GT simple_expression
    (43) expression -> . simple_expression GE simple_expression
    (44) simple_expression -> . term
    (45) simple_expression -> . simple_expression PLUS term
    (46) simple_expression -> . simple_expression MINUS term
    (47) simple_expression -> . simple_expression OR term
    (48) term -> . factor
    (49) term -> . term TIMES factor
    (50) term -> . term DIVIDE factor
    (51) term -> . term DIV factor
    (52) term -> . term MOD factor
    (53) term -> . term AND factor
    (54) factor -> . variable
    (55) factor -> . NUMBER
    (56) factor -> . STRING_LITERAL
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (59) factor -> . LPAREN expression RPAREN
    (27) variable -> . ID
    (28) variable -> . ID LBRACKET expression RBRACKET

    NUMBER          shift and go to state 47
    STRING_LITERAL  shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    LPAREN          shift and go to state 51
    ID              shift and go to state 32

    expression                     shift and go to state 52
    simple_expression              shift and go to state 43
    term                           shift and go to state 44
    factor                         shift and go to state 45
    variable                       shift and go to state 46

state 31

    (36) for_statement -> FOR . ID ASSIGN expression TO expression DO statement

    ID              shift and go to state 53


state 32

    (27) variable -> ID .
    (28) variable -> ID . LBRACKET expression RBRACKET

    ASSIGN          reduce using rule 27 (variable -> ID .)
    TIMES           reduce using rule 27 (variable -> ID .)
    DIVIDE          reduce using rule 27 (variable -> ID .)
    DIV             reduce using rule 27 (variable -> ID .)
    MOD             reduce using rule 27 (variable -> ID .)
    AND             reduce using rule 27 (variable -> ID .)
    EQUAL           reduce using rule 27 (variable -> ID .)
    NE              reduce using rule 27 (variable -> ID .)
    LT              reduce using rule 27 (variable -> ID .)
    LE              reduce using rule 27 (variable -> ID .)
    GT              reduce using rule 27 (variable -> ID .)
    GE              reduce using rule 27 (variable -> ID .)
    PLUS            reduce using rule 27 (variable -> ID .)
    MINUS           reduce using rule 27 (variable -> ID .)
    OR              reduce using rule 27 (variable -> ID .)
    THEN            reduce using rule 27 (variable -> ID .)
    DO              reduce using rule 27 (variable -> ID .)
    SEMICOLON       reduce using rule 27 (variable -> ID .)
    END             reduce using rule 27 (variable -> ID .)
    ELSE            reduce using rule 27 (variable -> ID .)
    COMMA           reduce using rule 27 (variable -> ID .)
    RPAREN          reduce using rule 27 (variable -> ID .)
    RBRACKET        reduce using rule 27 (variable -> ID .)
    TO              reduce using rule 27 (variable -> ID .)
    LBRACKET        shift and go to state 54


state 33

    (5) var_declaration_list -> var_declaration SEMICOLON . var_declaration_list
    (6) var_declaration_list -> var_declaration SEMICOLON .
    (5) var_declaration_list -> . var_declaration SEMICOLON var_declaration_list
    (6) var_declaration_list -> . var_declaration SEMICOLON
    (7) var_declaration -> . id_list COLON type
    (8) id_list -> . ID
    (9) id_list -> . ID COMMA id_list

    BEGIN           reduce using rule 6 (var_declaration_list -> var_declaration SEMICOLON .)
    ID              shift and go to state 14

    var_declaration                shift and go to state 12
    var_declaration_list           shift and go to state 55
    id_list                        shift and go to state 13

state 34

    (7) var_declaration -> id_list COLON . type
    (11) type -> . INTEGER
    (12) type -> . BOOLEAN
    (13) type -> . STRING
    (14) type -> . array_type
    (10) array_type -> . ARRAY LBRACKET NUMBER DOTDOT NUMBER RBRACKET OF type

    INTEGER         shift and go to state 57
    BOOLEAN         shift and go to state 58
    STRING          shift and go to state 59
    ARRAY           shift and go to state 61

    type                           shift and go to state 56
    array_type                     shift and go to state 60

state 35

    (9) id_list -> ID COMMA . id_list
    (8) id_list -> . ID
    (9) id_list -> . ID COMMA id_list

    ID              shift and go to state 14

    id_list                        shift and go to state 62

state 36

    (25) compound_statement -> BEGIN statements . END

    END             shift and go to state 63


state 37

    (2) block -> declarations BEGIN statements END .

    DOT             reduce using rule 2 (block -> declarations BEGIN statements END .)


state 38

    (15) statements -> statement SEMICOLON . statements
    (15) statements -> . statement SEMICOLON statements
    (16) statements -> . statement
    (17) statement -> . assignment
    (18) statement -> . writeln
    (19) statement -> . readln
    (20) statement -> . if_statement
    (21) statement -> . while_statement
    (22) statement -> . for_statement
    (23) statement -> . compound_statement
    (24) statement -> . empty
    (26) assignment -> . variable ASSIGN expression
    (29) writeln -> . WRITELN LPAREN expression_list RPAREN
    (32) readln -> . READLN LPAREN variable RPAREN
    (33) if_statement -> . IF expression THEN statement
    (34) if_statement -> . IF expression THEN statement ELSE statement
    (35) while_statement -> . WHILE expression DO statement
    (36) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (25) compound_statement -> . BEGIN statements END
    (60) empty -> .
    (27) variable -> . ID
    (28) variable -> . ID LBRACKET expression RBRACKET

    WRITELN         shift and go to state 27
    READLN          shift and go to state 28
    IF              shift and go to state 29
    WHILE           shift and go to state 30
    FOR             shift and go to state 31
    BEGIN           shift and go to state 15
    SEMICOLON       reduce using rule 60 (empty -> .)
    END             reduce using rule 60 (empty -> .)
    ID              shift and go to state 32

    statement                      shift and go to state 17
    statements                     shift and go to state 64
    assignment                     shift and go to state 18
    writeln                        shift and go to state 19
    readln                         shift and go to state 20
    if_statement                   shift and go to state 21
    while_statement                shift and go to state 22
    for_statement                  shift and go to state 23
    compound_statement             shift and go to state 24
    empty                          shift and go to state 25
    variable                       shift and go to state 26

state 39

    (26) assignment -> variable ASSIGN . expression
    (37) expression -> . simple_expression
    (38) expression -> . simple_expression EQUAL simple_expression
    (39) expression -> . simple_expression NE simple_expression
    (40) expression -> . simple_expression LT simple_expression
    (41) expression -> . simple_expression LE simple_expression
    (42) expression -> . simple_expression GT simple_expression
    (43) expression -> . simple_expression GE simple_expression
    (44) simple_expression -> . term
    (45) simple_expression -> . simple_expression PLUS term
    (46) simple_expression -> . simple_expression MINUS term
    (47) simple_expression -> . simple_expression OR term
    (48) term -> . factor
    (49) term -> . term TIMES factor
    (50) term -> . term DIVIDE factor
    (51) term -> . term DIV factor
    (52) term -> . term MOD factor
    (53) term -> . term AND factor
    (54) factor -> . variable
    (55) factor -> . NUMBER
    (56) factor -> . STRING_LITERAL
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (59) factor -> . LPAREN expression RPAREN
    (27) variable -> . ID
    (28) variable -> . ID LBRACKET expression RBRACKET

    NUMBER          shift and go to state 47
    STRING_LITERAL  shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    LPAREN          shift and go to state 51
    ID              shift and go to state 32

    variable                       shift and go to state 46
    expression                     shift and go to state 65
    simple_expression              shift and go to state 43
    term                           shift and go to state 44
    factor                         shift and go to state 45

state 40

    (29) writeln -> WRITELN LPAREN . expression_list RPAREN
    (30) expression_list -> . expression
    (31) expression_list -> . expression COMMA expression_list
    (37) expression -> . simple_expression
    (38) expression -> . simple_expression EQUAL simple_expression
    (39) expression -> . simple_expression NE simple_expression
    (40) expression -> . simple_expression LT simple_expression
    (41) expression -> . simple_expression LE simple_expression
    (42) expression -> . simple_expression GT simple_expression
    (43) expression -> . simple_expression GE simple_expression
    (44) simple_expression -> . term
    (45) simple_expression -> . simple_expression PLUS term
    (46) simple_expression -> . simple_expression MINUS term
    (47) simple_expression -> . simple_expression OR term
    (48) term -> . factor
    (49) term -> . term TIMES factor
    (50) term -> . term DIVIDE factor
    (51) term -> . term DIV factor
    (52) term -> . term MOD factor
    (53) term -> . term AND factor
    (54) factor -> . variable
    (55) factor -> . NUMBER
    (56) factor -> . STRING_LITERAL
    (57) factor -> . TRUE
    (58) factor -> . FALSE
    (59) factor -> . LPAREN expression RPAREN
    (27) variable -> . ID
    (28) variable -> . ID LBRACKET expression RBRACKET

    NUMBER          shift and go to state 47
    STRING_LITERAL  shift and go to state 48
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50
    LPAREN          shift and go to state 51
    ID              shift and go to state 32

    expression_list                shift and go to state 66
    expression                     shift and go to state 67
    simple_expression              shift and go to state 43
    term                           shift and go to state 44
    factor                         shift and go to state 45
    variable                       shift and go to state 46

state 41

    (32) readln -> READLN LPAREN . variable RPAREN
    (27) variable -> . ID
    (28) variable -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 32

    variable                       shift and go to state 68

state 42

    (33) if_statement -> IF expression . THEN statement
    (34) if_statement -> IF expression . THEN statement ELSE statement

    THEN            shift and go to state 69


state 43

    (37) expression -> simple_expression .
    (38) expression -> simple_expression . EQUAL simple_expression
    (39) expression -> simple_expression . NE simple_expression
    (40) expression -> simple_expression . LT simple_expression
    (41) expression -> simple_expression . LE simple_expression
    (42) expression -> simple_expression . GT simple_expression
    (43) expression -> simple_expression . GE simple_expression
    (45) simple_expression -> simple_expression . PLUS term
    (46) simple_expression -> simple_expression . MINUS term
    (47) simple_expression -> simple_expression . OR term

    THEN            reduce using rule 37 (expression -> simple_expression .)
    DO              reduce using rule 37 (expression -> simple_expression .)
    SEMICOLON       reduce using rule 37 (expression -> simple_expression .)
    END             reduce using rule 37 (expression -> simple_expression .)
    ELSE            reduce using rule 37 (expression -> simple_expression .)
    COMMA           reduce using rule 37 (expression -> simple_expression .)
    RPAREN          reduce using rule 37 (expression -> simple_expression .)
    RBRACKET        reduce using rule 37 (expression -> simple_expression .)
    TO              reduce using rule 37 (expression -> simple_expression .)
    EQUAL           shift and go to state 70
    NE              shift and go to state 71
    LT              shift and go to state 72
    LE              shift and go to state 73
    GT              shift and go to state 74
    GE              shift and go to state 75
    PLUS            shift and go to state 76
    MINUS           shift and go to state 77
    OR              shift and go to state 78


state 44

    (44) simple_expression -> term .
    (49) term -> term . TIMES factor
    (50) term -> term . DIVIDE factor
    (51) term -> term . DIV factor
    (52) term -> term . MOD factor
    (53) term -> term . AND factor

    EQUAL           reduce using rule 44 (simple_expression -> term .)
    NE              reduce using rule 44 (simple_expression -> term .)
    LT              reduce using rule 44 (simple_expression -> term .)
    LE              reduce using rule 44 (simple_expression -> term .)
    GT              reduce using rule 44 (simple_expression -> term .)
    GE              reduce using rule 44 (simple_expression -> term .)
    PLUS            reduce using rule 44 (simple_expression -> term .)
    MINUS           reduce using rule 44 (simple_expression -> term .)
    OR              reduce using rule 44 (simple_expression -> term .)
    THEN            reduce using rule 44 (simple_expression -> term .)
    DO              reduce using rule 44 (simple_expression -> term .)
    SEMICOLON       reduce using rule 44 (simple_expression -> term .)
    END             reduce using rule 44 (simple_expression -> term .)
    ELSE            reduce using rule 44 (simple_expression -> term .)
    COMMA           reduce using rule 44 (simple_expression -> term .)
    RPAREN          reduce using rule 44 (simple_expression -> term .)
    RBRACKET        reduce using rule 44 (simple_expression -> term .)
    TO              reduce using rule 44 (simple_expression -> term .)
    TIMES           shift and go to state 79
    DIVIDE          shift and go to state 80
    DIV             shift and go to state 81
    MOD             shift and go to state 82
    AND             shift and go to state 83


state 45

    (48) term -> factor .

    TIMES           reduce using rule 48 (term -> factor .)
    DIVIDE          reduce using rule 48 (term -> factor .)
    DIV             reduce using rule 48 (term -> factor .)
    MOD             reduce using rule 48 (term -> factor .)
    AND             reduce using rule 48 (term -> factor .)
    EQUAL           reduce using rule 48 (term -> factor .)
    NE              reduce using rule 48 (term -> factor .)
    LT              reduce using rule 48 (term -> factor .)
    LE              reduce using rule 48 (term -> factor .)
    GT              reduce using rule 48 (term -> factor .)
    GE              reduce using rule 48 (term -> factor .)
    PLUS            reduce using rule 48 (term -> factor .)
    MINUS           reduce using rule 48 (term -> factor .)
    OR              reduce using rule 48 (term -> factor .)
    THEN            reduce using rule 48 (term -> factor .)
    DO              reduce using rule 48 (term -> factor .)
    SEMICOLON       reduce using rule 48 (term -> factor .)
    END             reduce using rule 48 (term -> factor .)
    ELSE            reduce using rule 48 (term -> factor .)
    COMMA           reduce using rule 48 (term -> factor .)
    RPAREN          reduce using rule 48 (term -> factor .)
    RBRACKET        reduce using rule 48 (term -> factor .)
    TO              reduce using rule 48 (term -> factor .)


state 46

    (54) factor -> variable .

    TIMES           reduce using rule 54 (factor -> variable .)
    DIVIDE          reduce using rule 54 (factor -> variable .)
    DIV             reduce using rule 54 (factor -> variable .)
    MOD             reduce using rule 54 (factor -> variable .)
    AND             reduce using rule 54 (factor -> variable .)
    EQUAL           reduce using rule 54 (factor -> variable .)
    NE              reduce using rule 54 (factor -> variable .)
    LT              reduce using rule 54 (factor -> variable .)
    LE              reduce using rule 54 (factor -> variable .)
    GT              reduce using rule 54 (factor -> variable .)
    GE              reduce using rule 54 (factor -> variable .)
    PLUS            reduce using rule 54 (factor -> variable .)
    MINUS           reduce using rule 54 (factor -> variable .)
    OR              reduce using rule 54 (factor -> variable .)
    THEN            reduce using rule 54 (factor -> variable .)
    DO              reduce using rule 54 (factor -> variable .)
    SEMICOLON       reduce using rule 54 (factor -> variable .)
    END             reduce using rule 54 (factor -> variable .)
    ELSE            reduce using rule 54 (factor -> variable .)
    COMMA           reduce using rule 54 (factor -> variable .)
    RPAREN          reduce using rule 54 (factor -> variable .)
    RBRACKET        reduce using rule 54 (factor -> variable .)
    TO              reduce using rule 54 (factor -> variable .)


state 47

    (55) factor -> NUMBER .

    TIMES           reduce using rule 55 (factor -> NUMBER .)
    DIVIDE          reduce using rule 55 (factor -> NUMBER .)
    DIV             reduce using rule 55 (factor -> NUMBER .)
    MOD             reduce using rule 55 (factor -> NUMBER .)
    AND             reduce using rule 55 (factor -> NUMBER .)
    EQUAL           reduce using rule 55 (factor -> NUMBER .)
    NE              reduce using rule 55 (factor -> NUMBER .)
    LT              reduce using rule 55 (factor -> NUMBER .)
    LE              reduce using rule 55 (factor -> NUMBER .)
    GT              reduce using rule 55 (factor -> NUMBER .)
    GE              reduce using rule 55 (factor -> NUMBER .)
    PLUS            reduce using rule 55 (factor -> NUMBER .)
    MINUS           reduce using rule 55 (factor -> NUMBER .)
    OR              reduce using rule 55 (factor -> NUMBER .)
    THEN            reduce using rule 55 (factor -> NUMBER .)
    DO              reduce using rule 55 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 55 (factor -> NUMBER .)
    END             reduce using rule 55 (factor -> NUMBER .)
    ELSE            reduce using rule 55 (factor -> NUMBER .)
    COMMA           reduce using rule 55 (factor -> NUMBER .)
    RPAREN          reduce using rule 55 (factor -> NUMBER .)
    RBRACKET        reduce using rule 55 (factor -> NUMBER .)
    TO              reduce using rule 55 (factor -> NUMBER .)


state 48

    (56) factor -> STRING_LITERAL .

    TIMES           reduce using rule 56 (factor -> STRING_LITERAL .)
    DIVIDE          reduce using rule 56 (factor -> STRING_LITERAL .)
    DIV             reduce using rule 56 (factor -> STRING_LITERAL .)
    MOD             reduce using rule 56 (factor -> STRING_LITERAL .)
    AND             reduce using rule 56 (factor -> STRING_LITERAL .)
    EQUAL           reduce using rule 56 (factor -> STRING_LITERAL .)
    NE              reduce using rule 56 (factor -> STRING_LITERAL .)
    LT              reduce using rule 56 (factor -> STRING_LITERAL .)
    LE              reduce using rule 56 (factor -> STRING_LITERAL .)
    GT              reduce using rule 56 (factor -> STRING_LITERAL .)
    GE              reduce using rule 56 (factor -> STRING_LITERAL .)
    PLUS            reduce using rule 56 (factor -> STRING_LITERAL .)
    MINUS           reduce using rule 56 (factor -> STRING_LITERAL .)
    OR              reduce using rule 56 (factor -> STRING_LITERAL .)
    THEN            reduce using rule 56 (factor -> STRING_LITERAL .)
    DO              reduce using rule 56 (factor -> STRING_LITERAL .)
    SEMICOLON       reduce using rule 56 (factor -> STRING_LITERAL .)
    END             reduce using rule 56 (factor -> STRING_LITERAL .)
    ELSE            reduce using rule 56 (factor -> STRING_LITERAL .)
    COMMA           reduce using rule 56 (factor -> STRING_LITERAL .)
    RPAREN          reduce using rule 56 (factor -> STRING_LITERAL .)
    RBRACKET        reduce using rule 56 (factor -> STRING_LITERAL .)
    TO              reduce using rule 56 (factor -> STRING_LITERAL .)


state 49

    (57) factor -> TRUE .
